# config-controller

./: .dockerignore  .gitlab-ci.yml  Dockerfile  Procfile  README.md  config.py  create-image.sh  docker-bake.hcl  entrypoint.sh  pyproject.toml  requirements.txt  skaffold.yaml  sonar-project.properties  test_requirements.txt
.github/workflows/: scan.yml
controller/: __init__.py  docker_api.py  kubernetes_api.py  routes.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/: config-controller.yaml
tests/: test_server.py
