[project]
name = "config-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker==7.1.0",
    "fastapi[standard]>=0.135.3",
    "kubernetes==21.7.0",
    "mako==1.3.6",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
]

[tool.setuptools]
py-modules = ["controller"]
