[project]
name = "config-controller"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docker==7.1.0",
    "fastapi[standard]>=0.135.3",
    "kubernetes==21.7.0",
    "mako==1.3.6",
    "opentelemetry-distro==0.60b1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "single"
